objects/ShippingReport__c.object
<CustomObject>
    <fields>
        <fullName>ACTUAL_FAB_GROUP__c</fullName>
        <label>ACTUAL_FAB_GROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHARTERED_PART_NAME__c</fullName>
        <label>INTERNAL PART NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COC_LINK__c</fullName>
        <label>COC LINK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONNECTING_FLIGHT_NUM__c</fullName>
        <label>CONNECTING FLIGHT NUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSD__c</fullName>
        <label>CSD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_ID__c</fullName>
        <label>CUSTOMER ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_INITIAL__c</fullName>
        <label>CUSTOMER INITIAL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_PART_NAME__c</fullName>
        <label>CUSTOMER PART NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETEST__c</fullName>
        <label>ETEST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAB__c</fullName>
        <label>CLEAN ROOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLIGHT_NUM__c</fullName>
        <label>FLIGHT NUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEOMETRY_NAME__c</fullName>
        <label>GEOMETRY NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAWB__c</fullName>
        <label>HAWB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HEADER_ID__c</fullName>
        <label>HEADER ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_ELIGIBLE_TO_NPI__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IS ELIGIBLE TO NPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITEM_TYPE__c</fullName>
        <label>ITEM TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_ID__c</fullName>
        <label>LINE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOT_ID__c</fullName>
        <label>LOT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOT_PRIORITY__c</fullName>
        <label>LOT PRIORITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOT_TYPE__c</fullName>
        <label>LOT TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAWB__c</fullName>
        <label>MAWB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORG_ID__c</fullName>
        <label>ORG ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSD__c</fullName>
        <label>OSD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PARENT_INITIAL__c</fullName>
        <label>PARENT INITIAL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PICKING_LINE_DETAIL_ID__c</fullName>
        <label>PICKING LINE DETAIL ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_HYPR__c</fullName>
        <label>PO HYPR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_LINENUM__c</fullName>
        <label>PO LINENUM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM1__c</fullName>
        <label>PRM1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM2__c</fullName>
        <label>PRM2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROCESS_NAME__c</fullName>
        <label>PROCESS NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_NO__c</fullName>
        <label>RMA NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPMENT_LINE_ID__c</fullName>
        <label>SHIPMENT LINE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPPING_SOURCESYSTEM_ID__c</fullName>
        <externalId>true</externalId>
        <label>SHIPPING SOURCESYSTEM ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SHIP_ALERT_LINK__c</fullName>
        <label>SHIP ALERT LINK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_DATE__c</fullName>
        <label>SHIP DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SHIP_QTY_DIE__c</fullName>
        <label>SHIP QTY(DIE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_QTY_NEW_DIE__c</fullName>
        <formula>VALUE(SHIP_QTY_DIE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHIP QTY NEW (DIE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHIP_QTY_NEW__c</fullName>
        <formula>VALUE(SHIP_QTY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHIP QTY NEW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHIP_QTY__c</fullName>
        <label>SHIP QTY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_TO_LOCATION__c</fullName>
        <label>SHIP TO LOCATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO__c</fullName>
        <label>SO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAX_INVOICE__c</fullName>
        <label>TAX INVOICE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipping Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>shipment-{0000}</displayFormat>
        <label>ShippingReport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>